first step to multiple organization owners

--- a/client/views/app/organizations/area-settings/area-settings.html
+++ b/client/views/app/organizations/area-settings/area-settings.html
@@ -32,7 +32,7 @@
       <button class="btn btn-white col-xs-12 add-user">
         <i class="fa fa-user-plus"></i> Add User
       </button>
-      {{#if state$addUser}}
+      {{#if addUser}}
         {{> addUserPopup areaId=area._id}}
       {{/if}}
     {{/if}}
