--- a/client/views/app/menu-items/details/instructions/instructions.html
+++ b/client/views/app/menu-items/details/instructions/instructions.html
@@ -1,28 +1,32 @@
 <template name="menuItemInstructions">
   <div class="panel panel-default">
-    <div class="panel-heading">
-      <h3 class="panel-title">Instructions</h3>
+    <div class="ibox-title">
+      <h5>Instructions</h5>
+      <div class="ibox-tools">
+        <a data-toggle="collapse" data-target="#Instructions" aria-expanded="false" aria-controls="Instructions">
+          <i class="fa fa-chevron-up"></i></a>
+      </div>
     </div>
-    <div class="panel-body editorPanel">
+    <div class="ibox-content panel-body collapse editorPanel" id="Instructions" aria-expanded="false">
       {{#if state$isEditMode}}
         {{> textEditor id='menuItemEditorDetail' initialHtml=instructions}}
       {{else}}
         <p>{{{instructionsStr}}}</p>
       {{/if}}
-    </div>
-    {{#if canEditMenu}}
-      <div class="panel-footer edit-close-button">
-        <div class="row">
-          <span class="col-md-5 col-lg-5">
-            Click here to {{#if state$isEditMode}} close {{else}} edit {{/if}}
-          </span>
-          {{#if instruction.typing}}
-            <span class="col-md-2 col-lg-2">
-              {{#if instruction.saved}} Saved {{else}} Saving... {{/if}}
-            </span>
-          {{/if}}
+      {{#if canEditMenu}}
+        <div class="panel-footer">
+          <div class="row">
+            <div class="col-md-5 col-lg-5">
+              <span class="edit-close-button">Click here to {{#if state$isEditMode}} close {{else}} edit {{/if}}</span>
+            </div>
+            {{#if instruction.typing}}
+              <span class="col-md-2 col-lg-2">
+                {{#if instruction.saved}} Saved {{else}} Saving... {{/if}}
+              </span>
+            {{/if}}
+          </div>
         </div>
-      </div>
-    {{/if}}
+      {{/if}}
+    </div>
   </div>
 </template>
