Added bootstrap tooltip for user images in area-settings, changed size of photo in user popup

--- a/client/views/app/organizations/area-settings/user-popup/user-popup.html
+++ b/client/views/app/organizations/area-settings/user-popup/user-popup.html
@@ -6,8 +6,7 @@
          <div class="modal-header">
           <div class="row">
             <div class="col-xs-4">
-              <img src="{{profilePicture userId}}" alt="Profile photo of {{username userId}}" class="user-photo"
-                   title="{{username userId}}"/>
+              <img src="{{profilePicture userId}}" alt="Profile photo of {{username userId}}" class="user-photo"/>
             </div>
             <div class="col-xs-4">
               <h3>{{username userId}}</h3>
