--- a/client/views/app/organizations/area-settings/area-settings.html
+++ b/client/views/app/organizations/area-settings/area-settings.html
@@ -22,7 +22,7 @@
         <div class="user-profile-image-container">
           <a href="/user/profile/{{_id}}">
             <img src="{{profilePicture _id}}" alt="Profile photo of {{username _id}}" class="user-photo-min"
-                 title="{{username _id}}"/>
+                 title="{{username _id}}" data-toggle="tooltip"/>
           </a>
         </div>
       {{/each}}
