Changed style of POS Settings and POS/Menu Linking

--- a/client/views/app/organizations/area-settings/area-settings.less
+++ b/client/views/app/organizations/area-settings/area-settings.less
@@ -1,12 +1,19 @@
-.add-user {
-  float: none;
-  margin-bottom: 20px;
-}
+.area-settings {
+  .add-user {
+    float: none;
+    margin-bottom: 20px;
+  }
 
-.name-editable-wrapper {
-  margin: 20px 0;
+  .name-editable-wrapper {
+    margin: 20px 0;
 
-  h1 {
-    margin: 0;
+    h1 {
+      margin: 0;
+    }
+  }
+
+  .show-pos-settings {
+    cursor: pointer;
   }
 }
+
