--- a/client/views/app/organizations/common/edit-location-form/edit-location-form.html
+++ b/client/views/app/organizations/common/edit-location-form/edit-location-form.html
@@ -42,10 +42,10 @@
     {{> locationTimeSelect time=closingTime label="Closing Time" hoursName="closingHour" minutesName="closingMinutes"}}
 
     <div class="ibox collapsed">
-      <div class="ibox-title">
+      <div class="ibox-title show-pos-settings">
         <h5>POS Settings</h5>
         <div class="ibox-tools">
-          <a class="collapse-link show-pos-settings">
+          <a class="collapse-link">
             {{#if isPosSettingsShown}}
               <i class="fa fa-chevron-down"></i>
             {{else}}
