--- a/client/views/app/organizations/common/edit-location-form/edit-location-form.less
+++ b/client/views/app/organizations/common/edit-location-form/edit-location-form.less
@@ -8,3 +8,12 @@
 .show-pos-settings-btn {
   margin-bottom: 20px;
 }
+
+.edit-location-form-component {
+  .ibox-title {
+    padding-left: 0;
+    border-width: 1px 0 0;
+    cursor: pointer;
+  }
+}
+
