--- a/client/views/app/organizations/organization-flyout-header/organization-settings/organization-settings.html
+++ b/client/views/app/organizations/organization-flyout-header/organization-settings/organization-settings.html
@@ -19,8 +19,11 @@
             </span>
             Add/edit billing account
           </li>
-          <li class="list-group-item">
-            <a href="{{pathFor 'rolesSettings'}}">Roles</a>
+          <li class="list-group-item open-roles-settings-flyout">
+            <span class="badge">
+              <i class="fa fa-fw fa-angle-right"></i>
+            </span>
+            Roles
           </li>
           <li class="list-group-item">
             <a href="{{pathFor 'inactivityTimeoutSettings'}}">Inactivity Timeout</a>
