changed calendar url
added calendar header + removed fullcalendar buttons

removed day button from manager calendar

--- a/client/views/app/calendar/user-calendar/user-calendar.html
+++ b/client/views/app/calendar/user-calendar/user-calendar.html
@@ -1,3 +1,4 @@
 <template name="userCalendar">
-  {{> calendarItem userId=currentUser._id date=date type=type}}
+  {{> calendarHeader date=date type=type isManagerCalendar=false userId=userId}}
+  {{> calendarItem userId=userId date=date type=type}}
 </template>
