--- a/client/views/app/navigations/top-navbar/top-navbar.html
+++ b/client/views/app/navigations/top-navbar/top-navbar.html
@@ -32,7 +32,7 @@
         </li>
 
         <li>
-          <a href="{{pathFor 'calendar' type="day" date=shortDateFormat}}"><i class="fa fa-calendar"></i></a>
+          <a href="{{pathFor 'calendar' type="day" date=shortDateFormat userId=currentUser._id}}"><i class="fa fa-calendar"></i></a>
         </li>
 
         <li>
