--- a/client/views/app/calendar/calendar-header/calendar-header.html
+++ b/client/views/app/calendar/calendar-header/calendar-header.html
@@ -10,7 +10,7 @@
         <button class="calendar-week btn btn-sm {{#if equal type "week"}}btn-primary{{/if}}">week</button>
       {{/unless}}
 
-      {{> weekPicker date=date onDateChanged=onDateChanged type="day"}}
+      {{> weekPicker date=date onDateChanged=onDateChanged type=type}}
     </div>
   </div>
 </template>
