--- a/client/views/app/calendar/calendar.less
+++ b/client/views/app/calendar/calendar.less
@@ -4,22 +4,32 @@
   }
 }
 
-.fc {
-  th.fc-day-header {
-    cursor: pointer;
+.calendar-container {
+  margin-top: 20px;
+  padding: 0 0 38px 0;
+  background-color: #fff;
+
+  h3 {
+    padding-top: 45px;
   }
 
-  td.fc-today {
-    background-color: #fff;
-  }
+  .fc {
+    th.fc-day-header {
+      cursor: pointer;
+    }
 
-  .fc-icon {
-    &.fc-icon-right-single-arrow, &.fc-icon-left-single-arrow {
-      height: 100%;
+    td.fc-today {
+      background-color: #fff;
+    }
 
-      &:after {
-        font-size: 100%;
-        top: 4px;
+    .fc-icon {
+      &.fc-icon-right-single-arrow, &.fc-icon-left-single-arrow {
+        height: 100%;
+
+        &:after {
+          font-size: 100%;
+          top: 4px;
+        }
       }
     }
   }
