--- a/client/views/app/calendar/user-calendar/user-calendar.html
+++ b/client/views/app/calendar/user-calendar/user-calendar.html
@@ -1,4 +1,7 @@
 <template name="userCalendar">
   {{> calendarHeader date=date type=type isManagerCalendar=false userId=userId}}
-  {{> calendarItem userId=userId date=date type=type}}
+
+  <div class="calendar-container">
+    {{> calendarItem userId=userId date=date type=type}}
+  </div>
 </template>
