--- a/client/views/app/job-items/job-item-submit-edit/job-items-submit-edit.html
+++ b/client/views/app/job-items/job-item-submit-edit/job-items-submit-edit.html
@@ -1,6 +1,6 @@
 <template name="submitEditJobItem">
   <!-- Page heading -->
-  {{#unless isPlacedInFlayout}}
+  {{#unless isPlacedInFlyout}}
     {{#if isEditMode}}
       {{> pageHeading title="Edit Job" category="Jobs" name="jobedit" subCategory=jobItem.name id=jobItem._id}}
     {{else}}
@@ -12,19 +12,19 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="ibox float-e-margins">
-          {{#unless isPlacedInFlayout}}
+          {{#unless isPlacedInFlyout}}
           <div class="ibox-title">
             <h5>Create a new job</h5>
           </div>
           {{/unless}}
-          <div class="{{#if isPlacedInFlayout}}placed-in-flayout{{else}}ibox-content{{/if}}">
+          <div class="{{#if isPlacedInFlyout}}placed-in-flayout{{else}}ibox-content{{/if}}">
             <form class="form-horizontal job-item-submit-edit-form">
 
               <!-- Name -->
               <div class="form-group">
-                <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">Name</label>
+                <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">Name</label>
 
-                <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                   <input type="text" class="form-control name-input" placeholder="Enter Name for the job" required
                          value="{{jobItem.name}}">
                 </div>
@@ -32,9 +32,9 @@
 
               <!-- Type -->
               <div class="form-group">
-                <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">Type</label>
+                <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">Type</label>
 
-                <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                   <select class="form-control type-select" disabled="{{#if isJobTypePreselected}}disabled{{/if}}">
                     {{#each jobTypes}}
                       {{#if equal ../jobItem.type _id}}
@@ -50,10 +50,10 @@
               <!-- Sections -->
               {{#if isRecurring}}
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Sections</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     <select class="form-control sections-select">
                       {{#each sections}}
                         {{#if equal ../jobItem.section _id}}
@@ -70,17 +70,17 @@
               <!-- Recipe/Description-->
               <div class="form-group">
                 {{#if isPrep}}
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Recipe</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     {{> textEditor initialHtml= jobItem.recipe}} <!--  "Add recipe to job" -->
                   </div>
                 {{else}}
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Description</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     {{> textEditor initialHtml=jobItem.description}} <!-- "Add description to job" -->
                   </div>
                 {{/if}}
@@ -91,10 +91,10 @@
 
                 <!-- Checklist -->
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Checklist</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     <input type="text" class="form-control add-item-to-checklist"
                            placeholder="Add an item to checklist and press enter">
                     <br/>
@@ -112,10 +112,10 @@
 
                 <!-- Frequency -->
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Frequency</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     <select class="form-control frequency-select">
                       {{#each frequencies}}
                         {{#if equal ../jobItem.frequency value}}
@@ -133,9 +133,9 @@
 
                     <!-- Repeat every X weeks -->
                     <div class="form-group">
-                      <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label"></label>
+                      <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label"></label>
 
-                      <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                      <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                         <p>Repeat every <input type="number" class="repeat-every-weeks-input" min="2"
                                                value="{{../jobItem.repeatEvery}}"> weeks.
                         </p>
@@ -145,10 +145,10 @@
 
                   <!-- Repeat on -->
                   <div class="form-group">
-                    <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                    <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                       Repeat On</label>
 
-                    <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                    <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                       {{#each week}}
                         <div class="checkbox">
                           {{#if checked}}
@@ -167,10 +167,10 @@
 
                 <!-- Repeat at -->
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Repeat At</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     <div class="input-group">
                       {{> comboTimeEditable params=repeatAtComboEditableParams}}
                     </div>
@@ -179,20 +179,20 @@
 
                 <!-- Starts on-->
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Starts On</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     {{> reactiveDateTimePicker selector="starts-on-date-picker" value=startsOn}}
                   </div>
                 </div>
 
                 <!-- Ends on -->
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Ends</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
 
                     <div class="radio">
                       {{#if isEditMode}}
@@ -247,19 +247,19 @@
 
                 <!-- Ingredients used -->
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Ingredients used</label>
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     {{> listOfIngredients ingredients=ingredients onChange=editIngredientsListOnChange}}
                   </div>
                 </div>
 
                 <!-- Portions -->
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Portions</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     <input type="number" class="form-control portions" placeholder="No. of Portions"
                            value="{{jobItem.portions}}" required>
                   </div>
@@ -267,10 +267,10 @@
 
                 <!-- Shelf life -->
                 <div class="form-group">
-                  <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                  <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                     Shelf Life</label>
 
-                  <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                  <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                     <div class="input-group m-b">
                       <input type="number" class="form-control shelf-life" placeholder="Shelf Life"
                              value="{{jobItem.shelfLife}}" required>
@@ -284,10 +284,10 @@
 
               <!-- Active time -->
               <div class="form-group">
-                <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                   Active Time</label>
 
-                <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                   <div class="input-group m-b">
                     <input type="number" class="form-control active-time" placeholder="Active Time"
                            value="{{activeTime}}" required>
@@ -298,10 +298,10 @@
 
               <!-- labours wage -->
               <div class="form-group">
-                <label class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
+                <label class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-2{{/if}} control-label">
                   Labours" Wage</label>
 
-                <div class="{{#if isPlacedInFlayout}}col-sm-12{{else}}col-sm-10{{/if}}">
+                <div class="{{#if isPlacedInFlyout}}col-sm-12{{else}}col-sm-10{{/if}}">
                   <div class="input-group m-b">
                     <span class="input-group-addon">$</span>
                     <input type="number" class="form-control avg-wage-per-hour"
@@ -313,7 +313,7 @@
 
               <!-- Buttons -->
               <div class="row">
-                <div class="{{#if isPlacedInFlayout}}col-sm-10{{else}}col-sm-4 col-sm-offset-2{{/if}}">
+                <div class="{{#if isPlacedInFlyout}}col-sm-10{{else}}col-sm-4 col-sm-offset-2{{/if}}">
                   <a href="{{pathFor route="jobItemsMaster"}}" class="btn btn-white" type="button">Cancel</a>
                   <button class="btn btn-primary submit-button" type="submit">Save changes</button>
                 </div>
