changed view of menu item detail: image, settings, prep items, ingredients

--- a/client/views/app/menu-items/details/instructions/instructions.html
+++ b/client/views/app/menu-items/details/instructions/instructions.html
@@ -1,5 +1,5 @@
 <template name="menuItemInstructions">
-  <div class="panel panel-default">
+  <div class="ibox panel panel-default">
     <div class="ibox-title">
       <h5>Instructions</h5>
       <div class="ibox-tools">
