--- a/client/views/app/menu-items/details/settings/settings.html
+++ b/client/views/app/menu-items/details/settings/settings.html
@@ -1,57 +1,48 @@
 <template name="menuItemSettings">
-  <form class="form-horizontal">
-    <div class="form-group">
-      <label class="col-sm-2 control-label">Category</label>
-
-      <div class="col-sm-9 pull-right">
-        {{#if canEditMenu}}
-          {{> ghostEditableSelect values=categoryOptions selected=category onValueChanged=getOnCategoryChanged}}
-        {{else}}
-          <p>{{currentCategory.name}}</p>
-        {{/if}}
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-2 control-label">Status</label>
-
-      <div class="col-sm-9 pull-right">
-        {{#if isArchived}}
-          <p>archived</p>
-        {{else}}
-          {{#if canEditMenu}}
-            {{> ghostEditableSelect values=statusOptions selected=status onValueChanged=getOnStatusChanged}}
-          {{else}}
-            <p>{{status}}</p>
-          {{/if}}
-        {{/if}}
-      </div>
-    </div>
-
-    <div class="form-group">
-      <label class="col-sm-2 control-label">Image</label>
-
-      <div class="col-sm-9 pull-right">
-        <div class="menuImageDiv">
-          <div class="uploadedImageDiv">
-            {{#if image}}
-              <a href="#">
-                <span class="corner"></span>
-
-                <div class="image">
-                  <img src="{{image}}" class="img-responsive menu-item-image">
-                </div>
-              </a>
-            {{/if}}
-          </div>
+    <div class="ibox panel panel-default">
+      <div class="ibox-title">
+        <h5>Settings</h5>
+        <div class="ibox-tools">
+          <a data-toggle="collapse" data-target="#Settings" aria-expanded="false" aria-controls="Settings">
+            <i class="fa fa-chevron-up"></i></a>
         </div>
-        {{#if canEditMenu}}
-          <button type="button" class="btn btn-sm btn-info upload-image-button">
-            <i class="fa fa-edit m-r-sm"></i>
-            {{#if image}} Change Image {{else}} Add Image {{/if}}
-          </button>
-        {{/if}}
+      </div>
+      <div class="collapse" id="Settings" aria-expanded="false">
+        <ul class="list-group white-bg">
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                <p>Category</p>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                {{#if canEditMenu}}
+                  {{> ghostEditableSelect values=categoryOptions selected=category onValueChanged=getOnCategoryChanged}}
+                {{else}}
+                  <p>{{currentCategory.name}}</p>
+                {{/if}}
+              </div>
+            </div>
+          </li>
+
+          <li class="list-group-item">
+            <div class="row">
+              <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+                <p>Status</p>
+              </div>
+              <div class="col-lg-4 col-md-4 col-sm-4 col-xs-4">
+                {{#if isArchived}}
+                  <p>archived</p>
+                {{else}}
+                  {{#if canEditMenu}}
+                    {{> ghostEditableSelect values=statusOptions selected=status onValueChanged=getOnStatusChanged}}
+                  {{else}}
+                    <p>{{status}}</p>
+                  {{/if}}
+                {{/if}}
+              </div>
+            </div>
+          </li>
+        </ul>
       </div>
     </div>
-  </form>
 </template>
