moved calendar item to the separate directory
fixed calendar publication

created calendar namespace

--- a/client/views/app/calendar/calendar-view/calendar-header/calendar-header.html
+++ b/client/views/app/calendar/calendar-view/calendar-header/calendar-header.html
@@ -11,6 +11,8 @@
       {{/unless}}
 
       {{> weekPicker date=date onDateChanged=onDateChanged type=type}}
+
+      <button class="btn btn-primary btn-sm add-item-to-calendar">Add item</button>
     </div>
   </div>
 </template>
