add ingredients to ings list using flyout

--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -19,11 +19,11 @@
           </div>
 
           <div class="col-lg-8 col-xs-12">
-            {{> menuItemsListByType type='JobItems' jobItems=jobItems}}
+            {{> menuItemsListByType type='prep' jobItems=jobItems}}
           </div>
 
           <div class="col-lg-8 col-xs-12">
-            {{> menuItemsListByType type='Ingredients' ingredients=ingredients}}
+            {{> menuItemsListByType type='ings' ingredients=ingredients}}
           </div>
         </div>
 
