added pick item button
added job items palette

added drag`n`drop jobs onto calendar

--- a/client/views/app/calendar/calendar-view/calendar-header/add-event-item-flyout/add-event-item-flyout.html
+++ b/client/views/app/calendar/calendar-view/calendar-header/add-event-item-flyout/add-event-item-flyout.html
@@ -23,5 +23,11 @@
         {{/each}}
       </select>
     </div>
+
+    {{#if displayPickItemButton}}
+      <div class="form-group">
+        <button class="btn btn-primary">Pick the item</button>
+      </div>
+    {{/if}}
   </div>
 </template>
