--- a/client/views/app/calendar/calendar-view/calendar-header/calendar-header.html
+++ b/client/views/app/calendar/calendar-view/calendar-header/calendar-header.html
@@ -12,7 +12,7 @@
 
       {{> weekPicker date=date onDateChanged=onDateChanged type=type}}
 
-      <button class="btn btn-primary btn-sm add-item-to-calendar">Add item</button>
+      <!--<button class="btn btn-primary btn-sm add-item-to-calendar">Add item</button>-->
     </div>
   </div>
 </template>
