--- a/client/views/app/calendar/calendar.less
+++ b/client/views/app/calendar/calendar.less
@@ -52,3 +52,14 @@
     }
   }
 }
+
+.draggable-job-item {
+  display: inline-block;
+  padding: 5px;
+  background-color: #59D4D5;
+  border: 1px solid #23C6C8;
+  color: #fff;
+  border-radius: 3px;
+  cursor: pointer;
+  margin: 2px;
+}
