Implement navigation link for notifications

--- a/server/lib/notifications/templates/claim-shift.handlebars
+++ b/server/lib/notifications/templates/claim-shift.handlebars
@@ -34,6 +34,6 @@
     <a href="{{confirmClaimUrl}}" class="claim-button confirm-button">Confirm</a>
     <a href="{{rejectClaimUrl}}" class="claim-button reject-button">Reject</a>
 
-    <a href="{{rosterUrl}}" class="claim-button go-to-button">Go to roster</a>
+    <a href="{{rosterUrl}}" class="claim-button go-to-button" data-link-type="navigation">Go to roster</a>
   </p>
 </div>
