--- a/server/lib/notifications/templates/mention-in-a-newsfeed.handlebars
+++ b/server/lib/notifications/templates/mention-in-a-newsfeed.handlebars
@@ -23,6 +23,6 @@
   You've been mentioned in the newsfeed by <b>{{username}}</b>
 
   <p class="button-container">
-    <a href="{{linkToItem}}" class="claim-button confirm-button">Go to newsfeeds</a>
+    <a href="{{linkToItem}}" class="claim-button confirm-button" data-link-type="navigation">Go to newsfeeds</a>
   </p>
 </div>
