--- a/server/lib/notifications/templates/new-newsfeed-comment.handlebars
+++ b/server/lib/notifications/templates/new-newsfeed-comment.handlebars
@@ -23,6 +23,6 @@
   There is a new comment from <b>{{username}}</b> to your newsfeed post
 
   <p class="button-container">
-    <a href="{{linkToItem}}" class="claim-button confirm-button">Go to newsfeeds</a>
+    <a href="{{linkToItem}}" class="claim-button confirm-button" data-link-type="navigation">Go to newsfeeds</a>
   </p>
 </div>
