--- a/server/lib/notifications/templates/roster-published.handlebars
+++ b/server/lib/notifications/templates/roster-published.handlebars
@@ -39,6 +39,6 @@
   {{/if}}
 
   <p class="button-container">
-    <a href="{{rosterUrl}}" class="claim-button confirm-button">Go to the roster</a>
+    <a href="{{rosterUrl}}" class="claim-button confirm-button" data-link-type="navigation">Go to the roster</a>
   </p>
 </div>
