--- a/server/lib/notifications/templates/update-on-shift.handlebars
+++ b/server/lib/notifications/templates/update-on-shift.handlebars
@@ -23,6 +23,6 @@
   {{text}}
 
   <p class="button-container">
-    <a href="{{linkToItem}}" class="claim-button confirm-button">Go to the roster</a>
+    <a href="{{linkToItem}}" class="claim-button confirm-button" data-link-type="navigation">Go to the roster</a>
   </p>
 </div>
