--- a/client/views/app/menu-items/details/preps-list/preps-list-item/preps-list-item.html
+++ b/client/views/app/menu-items/details/preps-list/preps-list-item/preps-list-item.html
@@ -1,14 +1,14 @@
-<template name="addPrepStockListItem">
+<template name="prepListItem">
   <tr>
     <td>
       <div class="i-checks">
         <label>
-          <input type="checkbox" class="prep-stock-select">
+          <input type="checkbox" class="add-prep-checkbox">
         </label>
       </div>
     </td>
     <td>{{{itemName}}}</td>
     <td>{{type}}</td>
-    <td> {{#if isPrepJob}} {{activeTime}} {{else}} -N/A- {{/if}} </td>
+    <td>{{activeTime}}</td>
   </tr>
 </template>
