added preps to flyout preps list

--- a/client/views/app/menu-items/details/menu-items-list-by-type/ingredient-row/ingredient-row.html
+++ b/client/views/app/menu-items/details/menu-items-list-by-type/ingredient-row/ingredient-row.html
@@ -9,7 +9,6 @@
       </td>
     {{/if}}
     <td>{{itemName}}</td>
-    <td>{{type}}</td>
     <td>
       {{#if canEditMenu}}
         {{> ingredientRowQuantityEditable quantity=quantity onQuantityEditableSuccess=getOnQuantityEditableSuccess}}
@@ -17,12 +16,8 @@
         {{quantity}}
       {{/if}}
     </td>
-    <td>
-      {{#if itemMeasure}} {{itemMeasure}} {{else}} -NA- {{/if}}
-    </td>
-    <td>
-      $ {{price}}
-    </td>
+    {{#if equal type 'ings'}}<td>{{itemMeasure}}</td>{{/if}}
+    <td>$ {{price}}</td>
     {{#if canEditMenu}}
       <td>
         <i class="fa fa-trash text-danger remove-button" style="cursor: pointer;"></i>
