--- a/client/views/app/menu-items/details/menu-items-list-by-type/menu-items-list-by-type.html
+++ b/client/views/app/menu-items/details/menu-items-list-by-type/menu-items-list-by-type.html
@@ -18,30 +18,32 @@
           {{#if canEditMenu}}
             <th></th>
           {{/if}}
-          <th>Name</th>
-          <th>Type</th>
-          <th>Quantity</th>
-          <th>Measure</th>
-          <th>Price</th>
+          {{#each tableHeader}}
+            <th><b>{{this}}</b></th>
+          {{/each}}
           {{#if canEditMenu}}
             <th></th>
           {{/if}}
         </tr>
         </thead>
         <tbody>
-          {{#if jobItems}}
             {{#each jobItems}}
-              {{> menuItemIngredientRow item=jobItem quantity=quantity type="prep" setCurrentEditedIngredient=setCurrentEditedIngredient}}
+              {{> menuItemIngredientRow item=jobItem quantity=quantity type=../type analyzeItemCost=analyzeItemCost}}
             {{/each}}
-          {{else}}
+            {{#if jobItems}}
+              <tr>
+                <td></td>
+                <td></td>
+                <td class="text-right">Total</td>
+                <td>$ {{jobItemsTotalPrice}}</td>
+                <td></td>
+              </tr>
+            {{/if}}
             {{#each ingredients}}
-              {{> menuItemIngredientRow item=ingredient quantity=quantity type="ings" setCurrentEditedIngredient=setCurrentEditedIngredient}}
+              {{> menuItemIngredientRow item=ingredient quantity=quantity type=../type analyzeItemCost=analyzeItemCost}}
             {{/each}}
-          {{/if}}
         </tbody>
       </table>
     </div>
   </div>
-
-  <!--{{> addPrepStockModal jobItems=jobItems ingredients=ingredients}}-->
 </template>
