refactored preps list view, removed commented code, fixed search preps input

--- a/client/views/app/menu-items/details/preps-list/preps-list-item/preps-list-item.html
+++ b/client/views/app/menu-items/details/preps-list/preps-list-item/preps-list-item.html
@@ -7,8 +7,7 @@
         </label>
       </div>
     </td>
-    <td>{{{itemName}}}</td>
-    <td>{{type}}</td>
+    <td>{{{item.name}}}</td>
     <td>{{activeTime}}</td>
   </tr>
 </template>
