change view of menu item details performance

--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -12,9 +12,8 @@
             {{> menuItemSettings}}
             {{> menuItemsListByType type='prep' jobItems=jobItems}}
             {{> menuItemsListByType type='ings' ingredients=ingredients}}
+            {{> menuDetailPerformance}}
           </div>
-
-          {{> menuDetailWidgets}}
 
           <div class="col-lg-6">
             {{> taskWidget type='menus' itemId=_id}}
