moved calendar id and jQuery calendar object to the template context
added task type to the calendar

added calendar for every user

added universal item palette

added documentation to the calendar events

added tasks allocating to the calendar

fixed problem with task searching

--- a/client/views/app/calendar/calendar-view/calendar-header/calendar-header.html
+++ b/client/views/app/calendar/calendar-view/calendar-header/calendar-header.html
@@ -1,7 +1,13 @@
 <template name="calendarHeader">
   <div class="row wrapper border-bottom white-bg page-heading">
     <div class="col-xs-6">
-      <h2>{{dayFormat date}}</h2>
+      <h2>
+        {{#if isManagerCalendar}}
+          {{dayFormat date}}
+        {{else}}
+          Calendar of {{username userId}}
+        {{/if}}
+      </h2>
     </div>
 
     <div class="col-xs-6 title-action">
