--- a/client/views/app/calendar/calendar.less
+++ b/client/views/app/calendar/calendar.less
@@ -14,6 +14,10 @@
   }
 
   .fc {
+    .fc-resource-cell {
+      cursor: pointer;
+    }
+
     th.fc-day-header {
       cursor: pointer;
     }
@@ -53,13 +57,22 @@
   }
 }
 
-.draggable-job-item {
-  display: inline-block;
-  padding: 5px;
-  background-color: #59D4D5;
-  border: 1px solid #23C6C8;
-  color: #fff;
-  border-radius: 3px;
-  cursor: pointer;
-  margin: 2px;
+.items-palette {
+  margin-top: 20px;
+
+  //.panel-body {
+  //  max-height: 500px;
+  //  overflow-y: auto;
+  //}
+
+  .draggable-item {
+    display: inline-block;
+    padding: 5px;
+    background-color: #59D4D5;
+    border: 1px solid #23C6C8;
+    color: #fff;
+    border-radius: 3px;
+    cursor: pointer;
+    margin: 2px;
+  }
 }
