--- a/client/views/app/calendar/manager-calendar/manager-calendar.html
+++ b/client/views/app/calendar/manager-calendar/manager-calendar.html
@@ -1,11 +1,17 @@
 <template name="managerCalendar">
   {{> calendarHeader date=date type="day" isManagerCalendar=true userId=123}}
 
-  <div class="job-items-palette">
-    {{> jobItemsPalette}}
+  <div class="col-md-3">
+    <div class="items-palette job-items-palette">
+      {{> itemsPalette type='prep job'}}
+    </div>
+
+    <div class="items-palette tasks-items-palette">
+      {{> itemsPalette type='task' calendarType="day"}}
+    </div>
   </div>
 
-  <div class="calendar-container text-center">
+  <div class="calendar-container text-center col-md-9">
     {{#if users.length}}
       {{> calendarItem resources=users date=date type="day"}}
     {{else}}
