--- a/server/lib/notifications/templates/invitation-email.handlebars
+++ b/server/lib/notifications/templates/invitation-email.handlebars
@@ -300,7 +300,7 @@ A very basic CSS reset
               <table width="100%" cellpadding="0" cellspacing="0">
                 <tr>
                   <td class="content-block">
-                    Hi {{name}},
+                    Hi {{firstName}},
                   </td>
                 </tr>
                 <tr>
@@ -335,7 +335,7 @@ A very basic CSS reset
                     {{#with invitationSender}}
                       {{name}}<br>
                       {{email}}<br>
-                      {{phone}}<br>
+                      {{tel}}<br>
                     {{/with}}
                     {{organizationName}}
                   </td>
