Added PIN code to invited user profile

--- a/server/lib/notifications/templates/invitation-email.handlebars
+++ b/server/lib/notifications/templates/invitation-email.handlebars
@@ -318,6 +318,10 @@ A very basic CSS reset
                     <p>
                       <b>Password:</b> {{password}}
                     </p>
+
+                    <p>
+                      <b>PIN code:</b> {{pinCode}}
+                    </p>
                   </td>
                 </tr>
                 <tr>
