Last login functionality

--- a/client/views/app/users/profile/profile-items/profile/profile.html
+++ b/client/views/app/users/profile/profile-items/profile/profile.html
@@ -159,6 +159,8 @@
               </div>
             {{/if}}
           {{/if}}
+
+          <h4>Last login: {{lastLoginDate}}</h4>
         </div>
       </div>
     </div>
