--- a/client/views/app/menu-items/details/menu-item-details.html
+++ b/client/views/app/menu-items/details/menu-item-details.html
@@ -6,22 +6,26 @@
     <div class="row">
       <div class="col-lg-12">
         <div class="row">
-          <div class="col-lg-8 col-xs-12">
+          <div class="col-lg-8 col-md-8 col-xs-12 col-sm-12">
             {{> menuItemInstructions}}
             {{> menuItemImage}}
             {{> menuItemSettings}}
             {{> menuItemsListByType type='prep' jobItems=jobItems}}
             {{> menuItemsListByType type='ings' ingredients=ingredients}}
             {{> menuDetailPerformance}}
-          </div>
-
-          <div class="col-lg-6">
             {{> taskWidget type='menus' itemId=_id}}
           </div>
-
-          <div class="col-lg-6">
+          <div class="col-lg-4 col-md-4 col-sm-12 col-xs-12 no-padding">
             {{> commentsPanel id=_id type='menu'}}
           </div>
+
+          <!--<div class="col-lg-6">-->
+            <!--{{> taskWidget type='menus' itemId=_id}}-->
+          <!--</div>-->
+
+          <!--<div class="col-lg-6">-->
+            <!--{{> commentsPanel id=_id type='menu'}}-->
+          <!--</div>-->
         </div>
       </div>
     </div>
