--- a/client/views/app/menu-items/details/widgets/widgets.html
+++ b/client/views/app/menu-items/details/widgets/widgets.html
@@ -3,7 +3,10 @@
     <div class="ibox-title">
       <h5>Performance Snapshot</h5>
       <div class="ibox-tools">
-        <a class="btn btn-xs btn-link" href="#">View MenuRank Report</a>
+        <a class="btn btn-xs btn-link"
+           href="{{pathFor route='menuItemsRankReport' category='all' rangeType='yesterday' startDate=startDate}}">
+          View Menu Rank Report
+        </a>
         <a data-toggle="collapse" data-target="#MenuItemPerformance" aria-expanded="false" aria-controls="MenuItemPerformance">
           <i class="fa fa-chevron-up"></i>
         </a>
@@ -20,24 +23,55 @@
               <h4>{{salesPrice}} <small>Sale Price</small></h4>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 col-xs-offset-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-              <h4> - $ {{menuItemStats.ingCost}} <small>Ing</small></h4>
+              <h4>{{menuItemStats.ingCost}} <small>Ing</small></h4>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 col-xs-offset-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-              <h4> - $ {{menuItemStats.prepCost}} <small>Prep</small></h4>
+              <h4>{{menuItemStats.prepCost}} <small>Prep</small></h4>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 col-xs-offset-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-              <h4> - $ {{menuItemStats.tax}} <small>Tax</small></h4>
+              <h4>{{menuItemStats.tax}} <small>Tax</small></h4>
             </div>
             <div class="col-lg-2 col-md-2 col-sm-2 col-xs-6 col-xs-offset-6 col-lg-offset-0 col-md-offset-0 col-sm-offset-0">
-              <h4> = $ {{menuItemStats.contribution}} <small>Contribution</small></h4>
+              <h4>{{menuItemStats.contribution}} <small>Contribution</small></h4>
             </div>
           </div>
         </li>
         <li class="list-group-item">
-          <h4>Menu Rank <small>(last 7 days)</small></h4>
+          <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+              <h4>Menu Rank <small>(last 7 days)</small></h4>
+            </div>
+            {{#if weeklyRanks}}
+              <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
+                <h4 class="pull-right">{{itemRank.lastSevenDays}}</h4>
+              </div>
+              <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
+                <h4 class="{{#if itemRank.up}}text-navy{{else}}{{#if itemRank.notChanged}}text-primary{{/if}}text-danger{{/if}} pull-right">
+                  {{itemRank.changedPoints}} &nbsp;
+                  {{#if itemRank.notChanged}}{{else}}<i class="fa fa-arrow-{{#if itemRank.up}}up{{else}}down{{/if}}"></i>{{/if}}
+                </h4>
+              </div>
+            {{else}}
+              <div class="col-md-4 col-sm-4 col-xs-4 col-lg-4">
+                <h4>No rank for item</h4>
+              </div>
+            {{/if}}
+          </div>
         </li>
         <li class="list-group-item">
-          <h4>Contribution <small>(last 7 days)</small></h4>
+          <div class="row">
+            <div class="col-lg-8 col-md-8 col-sm-8 col-xs-8">
+              <h4>Contribution <small>(last 7 days)</small></h4>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
+              <h4 class="pull-right">123</h4>
+            </div>
+            <div class="col-md-2 col-sm-2 col-xs-2 col-lg-2">
+              <h4 class="text-navy pull-right">
+                14 % <i class="fa fa-arrow-up"></i>
+              </h4>
+            </div>
+          </div>
         </li>
       </ul>
     </div>
