--- a/client/views/app/menu-items/details/instructions/instructions.html
+++ b/client/views/app/menu-items/details/instructions/instructions.html
@@ -3,6 +3,13 @@
     <div class="ibox-title">
       <h5>Instructions</h5>
       <div class="ibox-tools">
+        {{#if instruction.typing}}
+          {{#if instruction.saved}}
+            <span class="text-navy pull-left"> &nbsp; Saved</span>
+          {{else}}
+            <span class="text-warning pull-left"> &nbsp; Saving...</span>
+          {{/if}}
+        {{/if}}
         <a data-toggle="collapse" data-target="#Instructions" aria-expanded="false" aria-controls="Instructions">
           <i class="fa fa-chevron-up"></i></a>
       </div>
@@ -13,20 +20,20 @@
       {{else}}
         <p class="activate-text-edit-mode">{{{instructionsStr}}}</p>
       {{/if}}
-      {{#if canEditMenu}}
-        <div class="panel-footer">
-          <div class="row">
-            <div class="col-md-5 col-lg-5">
-              <span class="edit-close-button">Click here to {{#if state$isEditMode}} close {{else}} edit {{/if}}</span>
-            </div>
-            {{#if instruction.typing}}
-              <span class="col-md-2 col-lg-2">
-                {{#if instruction.saved}} Saved {{else}} Saving... {{/if}}
-              </span>
-            {{/if}}
-          </div>
-        </div>
-      {{/if}}
+      <!--{{#if canEditMenu}}-->
+        <!--<div class="panel-footer">-->
+          <!--<div class="row">-->
+            <!--<div class="col-md-5 col-lg-5">-->
+              <!--<span class="edit-close-button">Click here to {{#if state$isEditMode}} close {{else}} edit {{/if}}</span>-->
+            <!--</div>-->
+            <!--{{#if instruction.typing}}-->
+              <!--<span class="col-md-2 col-lg-2">-->
+                <!--{{#if instruction.saved}} Saved {{else}} Saving... {{/if}}-->
+              <!--</span>-->
+            <!--{{/if}}-->
+          <!--</div>-->
+        <!--</div>-->
+      <!--{{/if}}-->
     </div>
   </div>
 </template>
