--- a/client/views/app/organizations/area-settings/area-settings.less
+++ b/client/views/app/organizations/area-settings/area-settings.less
@@ -1,9 +1,4 @@
 .area-settings {
-  .add-user {
-    float: none;
-    margin-bottom: 20px;
-  }
-
   .name-editable-wrapper {
     margin: 20px 0;
 
@@ -14,6 +9,10 @@
 
   .show-pos-settings {
     cursor: pointer;
+  }
+
+  .area-flyout-button {
+    margin-bottom: 20px;
   }
 }
 
