--- a/client/views/app/organizations/area-settings/add-user-popup/search-users-to-invite/search-user-info/search-user-info.html
+++ b/client/views/app/organizations/area-settings/add-user-popup/search-users-to-invite/search-user-info/search-user-info.html
@@ -3,7 +3,9 @@
     <img src="{{profilePicture this}}" alt="Profile image" class="user-photo-min"/>
     <span class="search-user-info-name">
       <b>{{{username this}}}</b>
-      ({{emails.[0].address}})
+      {{#if userEmail}}
+        ({{userEmail}})
+      {{/if}}
     </span>
 
     <i class="fa fa-plus pull-right search-user-info-plus"></i>
