Fixed bug with autocomplete in invitatations

--- a/client/views/app/organizations/area-settings/add-user-popup/add-user-popup.less
+++ b/client/views/app/organizations/area-settings/add-user-popup/add-user-popup.less
@@ -4,7 +4,7 @@
   clear: both;
   position: relative;
 
-  .add-user-to-area-form {
+  .add-user-to-area {
     .input-field {
       margin-bottom: 5px;
     }
