Fixed ux/design bugs

--- a/client/views/app/organizations/area-settings/user-popup/user-popup.html
+++ b/client/views/app/organizations/area-settings/user-popup/user-popup.html
@@ -37,8 +37,8 @@
           </div>
           {{#if isManager}}
             <div class="row">
-              <div class="col-xs-12 remove-user-from-area">
-                <a href="#">Remove From Area</a>
+              <div class="col-xs-12">
+                <a class="remove-user-from-area" href="#">Remove From Area</a>
               </div>
             </div>
           {{/if}}
