--- a/client/views/app/organizations/area-settings/user-popup/user-popup.less
+++ b/client/views/app/organizations/area-settings/user-popup/user-popup.less
@@ -42,6 +42,12 @@
     color: #2f4050;
     border: 1px solid #e5e6e7;
   }
+
+  .modal-body {
+    .role-select .control-label {
+      padding: 8px 12px;
+    }
+  }
 }
 
 .user-popup.in ~ .modal-backdrop.in {
